			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2615 2004/06/02 06:01:52 suz Exp $

<200406>
2004-06-01  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/ip6_input.c (ip6_savecontrol): do not check
	the current process or thread in the input path.  It is
	unnecessary and can even prohibit a legitimate process from
	getting the information.

<200405>
2004-05-31  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
	* kame/kame/pim6sd/mld6v2_proto.c: MLDv2 bug fixes:
	 - recognizes source list in CHANGE_TO_INCLUDE_MODE report.
	 - initializes MLD compatibile mode field when MLD group record
	   is created.
	* kame/kame/pim6sd/mld6v2.c: sanity check not to advertise MLDv2 Query
	  in non-querier state.

2004-05-28  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
	* freebsd[45]/sys: FreeBSD Security Advisory: FreeBSD-SA-04:11.msync

Thu May 27 17:55:28 JST 2004  itojun@iijlab.net
	* openbsd: switch to 3.5.  there is a lot more work to do (ALTQ, PF,
	  CARP, PFSYNC)

Wed May 26 11:58:56 JST 2004  itojun@iijlab.net
	* sys/netkey/keysock.c: support tons of pfkey messages generated
	  at once.  used only for DUMP and SPDDUMP only.
	
2004-05-23  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
	* kame/kame/pim6sd/mld6v2_proto.c: don't send MLDv1 Query even 
	  in MLDv1-compat mode to prevent MLDv2 hosts from unnecessarily 
	  shifting to MLDv1-compatible mode (see draft-vida-mld-v2-08.txt 
	  section 8.3.2 p.47)
	* kame/kame/pim6sd/mld6v2_proto.c: don't send MLDv2 General Query 
	  when it is not a querier.

2004-05-20  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
	* freebsd5: sync with FreeBSD 5.2.1-RELEASE.
	  ToDo: 
		- reflect changes by FreeBSD community into KAME repository
		- test ...
		- additional features like ALTQ, MIP6, SSM, ...

2004-05-19  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
	* kame/kame/pim6sd/route.c: fixed a bug that (*,G) entry is not 
	created at RP router when the RP address is specified in static-rp 
	configuration.
